[gd_scene load_steps=8 format=2]

[ext_resource path="res://al.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GoNotoCurrent.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="alr" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -135.5
margin_right = 375.0
margin_bottom = 135.5
rect_clip_content = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.231373, 0.32549, 1 )

[node name="title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -171.0
custom_fonts/font = SubResource( 2 )
text = "Titulo"
align = 1
valign = 1
autowrap = true

[node name="desc" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 100.0
margin_right = -10.0
margin_bottom = -55.0
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_styles/completion = SubResource( 6 )
text = "Descripci√≥n"
readonly = true
smooth_scrolling = true
wrap_enabled = true

[node name="dest" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -36.0
margin_right = -3.0
margin_bottom = -7.0
text = "Fine, i will do it!"

[node name="post" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -36.0
margin_right = -237.0
margin_bottom = -7.0
text = "I need"

[node name="postCant" type="SpinBox" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 138.0
margin_top = -38.0
margin_right = -6.0
margin_bottom = -5.0
value = 5.0
allow_greater = true
suffix = "minutes more."

[connection signal="pressed" from="dest" to="." method="_on_dest_pressed"]
[connection signal="pressed" from="post" to="." method="_on_post_pressed"]
